[package]
name = "revshell"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Simple tool to generate reverse shells in the terminal."
homepage = "https://www.github.com/caio-ishikawa/revshell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
